WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278564
WebContent process should allow mach exception handlers by default.
https://bugs.webkit.org/show_bug.cgi?id=278564
Summary
WebContent process should allow mach exception handlers by default.
Mark Lam
Reported
2024-08-23 09:54:43 PDT
282592@main
mistakenly only allowed the WebContent process to use mach exception handlers if initializer messages are present instead of unconditionally. We should fix this to be unconditional.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-23 09:55:28 PDT
<
rdar://problem/134573352
>
Mark Lam
Comment 2
2024-08-23 10:02:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32632
EWS
Comment 3
2024-08-23 11:53:07 PDT
Committed
282668@main
(5df4469841c8): <
https://commits.webkit.org/282668@main
> Reviewed commits have been landed. Closing PR #32632 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug