WebContent process should allow mach exception handlers by default. https://bugs.webkit.org/show_bug.cgi?id=278564 rdar://134573352

Reviewed by Yijia Huang.

282592@main mistakenly only allowed the WebContent process to use mach exception handlers if initializer
messages are present instead of unconditionally.  This patch fixed this to be unconditional.

* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.h:
(WebKit::XPCServiceInitializer):
* Source/WebKit/Shared/EntryPointUtilities/Cocoa/XPCService/XPCServiceEntryPoint.mm:
(WebKit::setJSCOptions):

Canonical link: https://commits.webkit.org/282668@main